--- a/index (1).html
+++ b/index (1).html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" type="image/png" sizes="192x192" href="serpiente.png">
-<link rel="apple-touch-icon" href="serpiente.png">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de la Serpiente</title>
+    <link rel="stylesheet" href="styles (1).css">
+    <link rel="icon" type="image/png" sizes="192x192" href="serpiente.png">
+    <link rel="apple-touch-icon" href="serpiente.png">
 </head>
 <body>
     <div class="game-container">
@@ -20,6 +21,6 @@
         </div>       <br>
         <button onclick="resetGame()">Reiniciar Juego</button>
     </div>
-    <script src="script.js"></script>
+    <script src="script (1).js"></script>
 </body>
 </html>
